Make caption more readable
Tweak text font-weight attribute

--- a/src/styles/_picture.scss
+++ b/src/styles/_picture.scss
@@ -24,6 +24,7 @@
             p{
                 margin-left: $spacing-unit * 5;
                 margin-right: $spacing-unit * 5;
+                font-weight: 600
             }
         }
     }
