--- a/src/styles/_teaserbox.scss
+++ b/src/styles/_teaserbox.scss
@@ -10,6 +10,10 @@
         background: blue;
     }
 
+    @media screen and (max-height: $break-medium) {
+        display: none
+    }
+
     img {
         padding: $spacing-unit * 5;
         max-height: 200px;
