--- a/src/styles/_selectorcontainer.scss
+++ b/src/styles/_selectorcontainer.scss
@@ -1,8 +1,8 @@
 .selector-container {
     display: flex;
     width: 100%;
-    background: $dark;
-    color: $light;
+    background: $panel-background;
+    color: $contrast;
     flex-wrap: nowrap;
     overflow-x: auto;
 }
